RecordIdentifier, respond with JSON if request could not be deserialized
